# greebo

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.yml
.github/workflows/: docker-build.yaml
proto/include/: logproto.proto
src/: build.rs  greebo.rs  handlers.rs  lib.rs  main.rs  types.rs  worker.rs
src/storage/: base.rs  elastic_storage.rs  logproto.rs  loki_storage.rs  mod.rs
src/types/: mod.rs
