[package]
name = "greebo"
version = "0.1.0"
authors = ["Marcin Kaciuba <marcin.kaciuba@gmail.com>"]

[features]
default = ["string-null-none"]
# Handle JSON `null` as an empty value in `String`.
string-null-empty = []
# Handle JSON `null` as `None` in an `Option<String>`.
string-null-none = []

[dependencies]
bytes = "0.4"
futures = "0.1"
env_logger = "*"

base64 = "0.11.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

actix = "0.7"
actix-web = "^0.7"

elastic = "*"
elastic_derive = "*"

crossbeam-channel = "0.2"
threadpool = "1.7"
maxminddb = "0.8.1"
fasthash = "0.3"
config = "0.9"
clap = "2.32.0"
log = "0.4"
