[package]
name = "greebo"
version = "0.1.0"
authors = ["Marcin Kaciuba <marcin.kaciuba@gmail.com>"]

[build-dependencies]
protoc-rust-grpc = "~0.8"

[features]
default = ["string-null-none"]
# Handle JSON `null` as an empty value in `String`.
string-null-empty = []
# Handle JSON `null` as `None` in an `Option<String>`.
string-null-none = []

[dependencies]
bytes = "1.0.1"
env_logger = "0.8.3"

base64 = "0.13.0"
base64-url = "1.4.8"
reqwest = "0.11.1"
openssl = "0.10.32"
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
json = "0.12.4"
actix = "0.10.0"
actix-web = "3.3.2"

elasticsearch = "7.11.0-alpha.1"
grpc            = "~0.8"
futures         = "~0.3"

crossbeam-channel = "0.5.0"
threadpool = "1.8.1"
maxminddb = "0.17.2"
fasthash = "0.4.0"
config = "0.10.1"
clap = "2.33.3"
log = "0.4.14"

